login or signup banadiye or hooks or state signup mein lga diya

--- a/frontend/src/Components/Pages/Login/Login.css
+++ b/frontend/src/Components/Pages/Login/Login.css
@@ -29,3 +29,7 @@
 .brand-icon:hover{
 box-shadow: 0 5px 5px rgba(0,0,0,0.30), 0 10px 20px rgba(0,0,0,0.22);
 }
+
+.forgot{
+  text-decoration: none;
+}
