--- a/frontend/src/Components/PageComponents/Navbar/Navbar.css
+++ b/frontend/src/Components/PageComponents/Navbar/Navbar.css
@@ -1,15 +1,24 @@
 .navbar{
  height: 70px;
+ font-size: 18px;
+ margin-bottom: 50px;
 }
 
 .nav-item{
  color: black;
+ margin: 0 15px;
 }
 
 .user-icon{
- margin-left: 85vw;
+ margin-left: 58%;
 }
 
 .navbar-brand{
  font-weight: 700;
+ margin: 10px 0 10px 50px;
+}
+
+.brand{
+ font-size: 35px;
+ margin-right: 50px; 
 }
