--- a/frontend/src/Components/PageComponents/NewsTiles/NewsTiles.css
+++ b/frontend/src/Components/PageComponents/NewsTiles/NewsTiles.css
@@ -1,49 +1,52 @@
-*, *::before, *::after {
-	 margin: 0;
-	 padding: 0;
-	 box-sizing: inherit;
-}
- /* html {
-	 box-sizing: border-box;
-	 font-size: 62.5%;
-} */
- body {
-	 display: flex;
-	 justify-content: center;
-	 align-content: center;
-	 background-color: #f5f5f5;
-	 font-family: "Inter", sans-serif;
-}
- @media (max-width: 60em) {
-	 body {
-		 padding: 3rem;
-	}
-}
- .grid {
-	 display: grid;
-	 width: 100%;
-	 grid-gap: 2rem;
-	 /* grid-template-columns: repeat(auto-fit, minmax(30rem, 3fr)); */
-  grid-template-columns: repeat(4, 10rem);
-	 /* align-items: center; */
-  margin: 0 auto;
-  justify-content: center;
-}
- @media (max-width: 60em) {
-	 .grid {
-		 grid-gap: 3rem;
-	}
-}
- .grid__item {
-	 background-color: #fff;
-	 border-radius: 0.4rem;
-	 overflow: hidden;
-	 box-shadow: 0 3rem 6rem rgba(0, 0, 0, .1);
-	 cursor: pointer;
-	 transition: 0.2s;
-}
- .grid__item:hover {
-	 transform: translateY(-0.5%);
-	 box-shadow: 0 4rem 8rem rgba(0, 0, 0, .2);
+.trash-div{
+	display: inline-block;
+	background-color: red;
+	width: 48px;
+	height: 48px;
+	text-align: center;	
+	border-radius: 50%;
+	box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+	display: relative;
+	float: left;
 }
 
+.trash-icon{
+	color: white;
+	margin-top: 8px;
+	box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
+.trash-div{
+    border-radius: 4px;
+    /* background: #fff; */
+    box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+  /* padding: 14px 80px 18px 36px; */
+  cursor: pointer;
+}
+
+.trash-div:hover{
+     transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
+
+.card{
+    border-radius: 4px;
+    /* background: #fff; */
+    box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+  /* padding: 14px 80px 18px 36px; */
+  cursor: pointer;
+}
+
+.card:hover{
+     transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
+.read-more{
+	display: relative;
+	float: right;
+	background-color: #319E27 !important;
+}
