--- a/frontend/src/Components/PageComponents/NewsNavbar/NewsNavbar.css
+++ b/frontend/src/Components/PageComponents/NewsNavbar/NewsNavbar.css
@@ -1,4 +1,5 @@
 .navbar{
+ width: 100%;
  height: 70px;
  font-size: 18px;
  margin-bottom: 50px;
@@ -11,10 +12,17 @@
 
 .admin-icon{
  margin-left: 5rem;
-}
+}   
 
+@media only screen and (min-width: 1920px){
 .user-icon{
- margin-left: 30rem;  
+ margin-left: 35rem;  
+}
+}
+@media only screen and (max-width: 1920px){
+.user-icon{
+ margin-left: 20rem;  
+}
 }
 
 .add-icon{
